# ClaudeBlenderLooped

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.bat
blendahbot/: __init__.py  __main__.py  addons.py  artifacts.py  assets.py  auth.py  blender.py  builder.py  cli.py  config.py  discovery.py  errors.py  loop.py  options.py  prompts.py  refs.py  settings.py  skills.py  steering.py  supervisor.py  tools.py  ui.py
blendahbot/gen3d/: __init__.py  __main__.py  base.py  compare.py  hunyuan3d.py  hunyuan_local.py  preview.py  trellis_local.py  tripo.py  vet.py
tests/: test_addons.py  test_asset_vet.py  test_auth.py  test_blender_protocol.py  test_config.py  test_discovery.py  test_gen3d.py  test_gen3d_preview.py  test_loop.py  test_refs.py  test_settings.py  test_steering.py  test_supervisor.py  test_ui.py  test_verdict.py
