[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blendahbot"
version = "0.1.0"
description = "Autonomous agent that builds in Blender until the result matches your request."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "claude-agent-sdk>=0.2.110",
    "rich>=13.0",
]

[project.scripts]
blendahbot = "blendahbot.cli:main"

[tool.setuptools.packages.find]
include = ["blendahbot*"]

[tool.setuptools.package-data]
blendahbot = ["py.typed"]
